--- a/index.html
+++ b/index.html
@@ -1,10 +1,42 @@
 <html>
 <body>
-  
+  <div class="board">
+    <div class="box1"></div>
+    <div class="box2"></div>
+    <div class="box3"></div>
+    <div class="box4"></div>
+    <div class="box5"></div>
+    <div class="box6"></div>
+    <div class="box7"></div>
+    <div class="box8"></div>
+    <div class="box9"></div>
+    <div class="box10"></div>
+    <div class="box11"></div>
+    <div class="box12"></div>
+    <div class="box13"></div>
+    <div class="box14"></div>
+    <div class="box15"></div>
+    <div class="box16"></div>
+  </div>
 </body>
 </html>
 <style>
   body{
     background-color:black;
   }
+  .board {
+    background-color: white;
+    width: 90vw;
+    height: 90vw;
+    position: fixed;
+    justify-self: center;
+    position-area: center;
+     display: grid;
+    grid-template-columns: repeat(4, 1fr); /* 4 equal columns */
+    grid-template-rows: repeat(4, 1fr);
+}
+.box1 {
+  border-left: 1px solid black;
+}
+  
 </style>
