--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
      display: grid;
     grid-template-columns: repeat(4, 1fr); /* 4 equal columns */
     grid-template-rows: repeat(4, 1fr);
+    border:1px solid white;
 }
-.box1 {
-  border-left: 1px solid black;
+.board > div {
+    border: 2px solid white;
 }
   
 </style>
