--- a/index.html
+++ b/index.html
@@ -1,162 +1,10 @@
 <html>
 <body>
-  <div class="board"></div>
-
-  <script>
-    const board = document.querySelector('.board');
-    const size = 4; // 4x4 boxes means 5x5 dots
-
-    // We'll store lines and boxes for state management
-    const horizontalLines = [];
-    const verticalLines = [];
-
-    // Create dots and lines container
-    // The grid will be (2*size+1) x (2*size+1)
-    // Odd positions are dots, even positions are lines or boxes
-
-    board.style.display = 'grid';
-    board.style.gridTemplateColumns = `repeat(${2 * size + 1}, 1fr)`;
-    board.style.gridTemplateRows = `repeat(${2 * size + 1}, 1fr)`;
-    board.style.width = '90vw';
-    board.style.height = '90vw';
-    board.style.backgroundColor = 'white';
-    board.style.position = 'relative';
-
-    function createDot() {
-      const dot = document.createElement('div');
-      dot.classList.add('dot');
-      return dot;
-    }
-
-    function createLine(isHorizontal, row, col) {
-      const line = document.createElement('div');
-      line.classList.add('line');
-      line.classList.add(isHorizontal ? 'horizontal' : 'vertical');
-      line.dataset.row = row;
-      line.dataset.col = col;
-      line.dataset.isHorizontal = isHorizontal;
-
-      line.addEventListener('click', () => {
-        line.classList.toggle('active');
-        checkBoxes();
-      });
-
-      return line;
-    }
-
-    function createBox(row, col) {
-      const box = document.createElement('div');
-      box.classList.add('box');
-      box.dataset.row = row;
-      box.dataset.col = col;
-      return box;
-    }
-
-    // Build the grid: dots, lines, and boxes
-    for (let r = 0; r < 2 * size + 1; r++) {
-      for (let c = 0; c < 2 * size + 1; c++) {
-        if (r % 2 === 0 && c % 2 === 0) {
-          // Dot
-          board.appendChild(createDot());
-        } else if (r % 2 === 0 && c % 2 === 1) {
-          // Horizontal line
-          const line = createLine(true, r / 2, (c - 1) / 2);
-          board.appendChild(line);
-          horizontalLines.push(line);
-        } else if (r % 2 === 1 && c % 2 === 0) {
-          // Vertical line
-          const line = createLine(false, (r - 1) / 2, c / 2);
-          board.appendChild(line);
-          verticalLines.push(line);
-        } else {
-          // Box
-          const box = createBox((r - 1) / 2, (c - 1) / 2);
-          board.appendChild(box);
-        }
-      }
-    }
-
-    function checkBoxes() {
-      // Check all boxes if their 4 surrounding lines are active
-      const boxes = board.querySelectorAll('.box');
-      boxes.forEach(box => {
-        const r = +box.dataset.row;
-        const c = +box.dataset.col;
-
-        // Lines around this box:
-        // Top horizontal line at (r, c)
-        const topLine = horizontalLines.find(l => +l.dataset.row === r && +l.dataset.col === c);
-        // Bottom horizontal line at (r+1, c)
-        const bottomLine = horizontalLines.find(l => +l.dataset.row === r + 1 && +l.dataset.col === c);
-        // Left vertical line at (r, c)
-        const leftLine = verticalLines.find(l => +l.dataset.row === r && +l.dataset.col === c);
-        // Right vertical line at (r, c+1)
-        const rightLine = verticalLines.find(l => +l.dataset.row === r && +l.dataset.col === c + 1);
-
-        if (topLine?.classList.contains('active') &&
-            bottomLine?.classList.contains('active') &&
-            leftLine?.classList.contains('active') &&
-            rightLine?.classList.contains('active')) {
-          box.classList.add('filled');
-        } else {
-          box.classList.remove('filled');
-        }
-      });
-    }
-  </script>
-
-  <style>
-    body {
-      background-color: black;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    .board {
-      box-sizing: border-box;
-    }
-    .dot {
-      width: 12px;
-      height: 12px;
-      background-color: black;
-      border-radius: 50%;
-      justify-self: center;
-      align-self: center;
-    }
-    .line {
-      background-color: black;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-    .line.horizontal {
-      height: 5px;
-      width: 100%;
-      justify-self: stretch;
-      align-self: center;
-    }
-    .line.vertical {
-      width: 5px;
-      height: 100%;
-      justify-self: center;
-      align-self: stretch;
-    }
-    .line:hover {
-      background-color: blue;
-    }
-    .line.active {
-      background-color: blue;
-    }
-    .box {
-      background-color: white;
-      width: 100%;
-      height: 100%;
-      transition: background-color 0.3s;
-    }
-    .box.filled {
-      background-color: lightblue;
-    }
-  </style>
+  <div class="board">
+  </div>
 </body>
+<link rel="stylesheet" href="css/style.css">
+<script src="js/script.js"></script>
 </html>
+
+
