--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
 </body>
 <link rel="stylesheet" href="css/style.css">
 <script src="js/script.js"></script>
+
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.1.0/firebase-app.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyCQh3iNGIGDVaFTmiEGyZa6r5r7U0thX80",
+    authDomain: "box-chain.firebaseapp.com",
+    projectId: "box-chain",
+    storageBucket: "box-chain.firebasestorage.app",
+    messagingSenderId: "957225784449",
+    appId: "1:957225784449:web:a02f5e553128cd61e66980"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+</script>
 </html>
 
 
