--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <input type="password" id="password" placeholder="Password">
         <button id="signup-button">Sign Up</button>
         <button id="signin-button">Sign In</button>
+        <button id="guest-login-button">Login as Guest</button>
         <p id="auth-status"></p>
     </div>
     
