--- a/index.html
+++ b/index.html
@@ -4,26 +4,28 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Chain Reaction</h1>
-    <div id="auth-container">
-        <h2>Sign In / Sign Up</h2>
-        <input type="email" id="email" placeholder="Email">
-        <input type="password" id="password" placeholder="Password">
-        <button id="signup-button">Sign Up</button>
-        <button id="signin-button">Sign In</button>
-        <button id="guest-login-button">Login as Guest</button>
-        <p id="auth-status"></p>
-    </div>
+        <header>
+            <div id="auth-container">
+                <h2>Sign In / Sign Up</h2>
+                <input type="email" id="email" placeholder="Email">
+                <input type="password" id="password" placeholder="Password">
+                <button id="signup-button">Sign Up</button>
+                <button id="signin-button">Sign In</button>
+                <button id="guest-login-button">Login as Guest</button>
+                <p id="auth-status"></p>
+            </div>
+            
+            <div id="game-lobby-container" style="display:none;">
+                <h2>Game Lobby</h2>
+                <button id="create-game-button">Create New Game</button>
+                <br><br>
+                <input type="text" id="game-id-input" placeholder="Enter Game ID">
+                <button id="join-game-button">Join Game</button>
+                <p id="lobby-status"></p>
+                <button id="signout-button">Sign Out</button>
+            </div>
+        </header>
     
-    <div id="game-lobby-container" style="display:none;">
-        <h2>Game Lobby</h2>
-        <button id="create-game-button">Create New Game</button>
-        <br><br>
-        <input type="text" id="game-id-input" placeholder="Enter Game ID">
-        <button id="join-game-button">Join Game</button>
-        <p id="lobby-status"></p>
-        <button id="signout-button">Sign Out</button>
-    </div>
 
     <div id="game-container" style="display:none;">
         <h2>Game Board</h2>
