--- a/index.html
+++ b/index.html
@@ -26,18 +26,14 @@
         </div>
         
         <div id="game-container" style="display:none;">
-            <p>You are in game: <span id="current-game-id"></span></p>
-            <p>Current Turn: <span id="current-player-turn"></span></p>
-            <button id="leave-game-button">Leave Game</button>
+            <div class="game-layout">
+                <p>You are in game: <span id="current-game-id"></span></p>
+                <p>Current Turn: <span id="current-player-turn"></span></p>
+                <button id="leave-game-button">Leave Game</button>
+            </div>
+            <div class="board"></div>
         </div>
 
-
-        <div class="board">
-
-        </div>
-
-
-    
     <script type="module" src="js/script.js"></script>
 </body>
 </html>
