--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                 <button id="leave-game-button">Leave Game</button>
             </div>
             <div class="board"></div>
+            <!-- Place this below your board element -->
+            <div id="player-names-container"></div>
         </div>
 
     <script type="module" src="js/script.js"></script>
