Update player name colors and add timer container to game layout

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <div class="board"></div>
             <!-- Place this below your board element -->
             <div id="player-names-container"></div>
+            <div id="timer-container" style="text-align:center; font-size:1.5em; margin-bottom:10px;"></div>
         </div>
 
     <script type="module" src="js/script.js"></script>
