Add timer container styling and prevent moves after game ends

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <button id="leave-game-button">Leave Game</button>
             </div>
             <div class="board"></div>
-            <div id="timer-container" style="text-align:center; font-size:1.5em; margin-bottom:10px;"></div>
+            <p id="timer-container"></p>
             <div id="player-names-container"></div>
         </div>
 
