--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
         
         <div id="game-lobby-container" style="display:none;">
             <h2>Game Lobby</h2>
-            <button id="create-game-button">Create New Game</button>
-            <input type="text" id="game-id-input" placeholder="Enter Game ID">
-            <button id="join-game-button">Join Game</button>
+            <button id="start-game-button">Start Game</button>
             <p id="lobby-status"></p>
             <button id="signout-button">Sign Out</button>
         </div>
