--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chain Reaction</title>
+    <title>Chain</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="data:,">
 </head>
