--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <div id="game-lobby-container" style="display:none;">
             <h2>Game Lobby</h2>
             <button id="start-game-button">Start Game</button>
-            <p id="lobby-status"></p>
             <button id="signout-button">Sign Out</button>
+            <p id="lobby-status"></p>
         </div>
         
         <div id="game-container" style="display:none;">
             <div class="game-layout">
-                <button id="leave-game-button">Leave Game</button>
+                <button id="leave-game-button"></button>
             </div>
             <div class="board"></div>
             <p id="timer-container"></p>
