Add login shortcut button and functionality to show login UI

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="icon" href="data:,">
 </head>
 <body>
+    <!-- Login shortcut icon -->
+    <div id="login-shortcut">
+        <button id="open-login-btn" title="Login" aria-label="Open login">
+            <!-- Simple user icon -->
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+                <path d="M12 12a5 5 0 1 0-5-5 5 5 0 0 0 5 5Zm0 2c-4.418 0-8 2.239-8 5v1h16v-1c0-2.761-3.582-5-8-5Z"/>
+            </svg>
+        </button>
+    </div>
+
         <div id="auth-container">
             <h2>Sign In / Sign Up</h2>
             <input type="email" id="email" placeholder="Email">
