--- a/index.html
+++ b/index.html
@@ -35,11 +35,24 @@
   </div>
 
   <!-- Game -->
-  <div id="game-container" style="display: none;">
-    <button id="leave-game-button" title="Leave game"></button>
+  <div id="game-container" style="display:none;">
+    <!-- New game header -->
+    <div class="game-header">
+      <button id="leave-game-button">Leave game</button>
+      <button id="open-login-btn-game" class="icon-btn" title="Account" aria-label="Open login">
+        <!-- user icon -->
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+          <path d="M12 12a5 5 0 1 0-5-5 5 5 0 0 0 5 5Zm0 2c-4.418 0-8 2.239-8 5v1h16v-1c0-2.761-3.582-5-8-5Z"/>
+        </svg>
+      </button>
+    </div>
+
+    <!-- Names, timer, board remain as-is -->
     <div id="player-names-container"></div>
     <div id="timer-container"></div>
     <div class="board"></div>
+
+    <!-- Remove any duplicate Leave game button below if you had one -->
   </div>
 
   <!-- Keep this -->
