--- a/index.html
+++ b/index.html
@@ -36,23 +36,21 @@
 
   <!-- Game -->
   <div id="game-container" style="display:none;">
-    <!-- New game header -->
+    <!-- New header above names -->
     <div class="game-header">
-      <button id="leave-game-button">Leave game</button>
-      <button id="open-login-btn-game" class="icon-btn" title="Account" aria-label="Open login">
-        <!-- user icon -->
+      <button id="leave-game-button" class="icon-btn" title="Leave game" aria-label="Leave game">
+        <!-- exit icon -->
         <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-          <path d="M12 12a5 5 0 1 0-5-5 5 5 0 0 0 5 5Zm0 2c-4.418 0-8 2.239-8 5v1h16v-1c0-2.761-3.582-5-8-5Z"/>
+          <path d="M10 17l1.41-1.41L8.83 13H21v-2H8.83l2.58-2.59L10 7l-5 5 5 5z"/>
+          <path d="M4 19h6v2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h6v2H4z"/>
         </svg>
       </button>
+      <!-- The login icon will be moved here at runtime (same element as lobby) -->
     </div>
 
-    <!-- Names, timer, board remain as-is -->
     <div id="player-names-container"></div>
     <div id="timer-container"></div>
     <div class="board"></div>
-
-    <!-- Remove any duplicate Leave game button below if you had one -->
   </div>
 
   <!-- Keep this -->
